# crx_kinematics

./: .clang-format  package.xml  pyproject.toml  setup.cfg  setup.py
config/: demo.rviz
crx_kinematics/: CMakeLists.txt  demo_node.py  package.xml  robot.py
crx_kinematics/include/crx_kinematics/: crx_kinematics_plugin.hpp  robot.hpp
crx_kinematics/src/: crx_kinematics_plugin.cpp  example_kdl.cpp  robot.cpp
crx_kinematics/test/: test_fk_ik.cpp  test_plugin.cpp
crx_kinematics/utils/: geometry.py  visualization.py
crx_kinematics_py/: package.xml  setup.cfg  setup.py
crx_kinematics_py/crx_kinematics_py/: demo_node.py  robot.py
crx_kinematics_py/crx_kinematics_py/utils/: geometry.py  visualization.py
crx_kinematics_py/launch/: demo.launch.py
crx_kinematics_py/meshes/crx10ia/visual/: link_4.stl  link_5.stl
crx_kinematics_py/tests/: test_fk_ik.py
launch/: demo.launch.py
meshes/crx10ia/visual/: link_1.stl  link_2.stl  link_3.stl  link_6.stl
tests/: test_fk_ik.py
