<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crx_kinematics</name>
  <version>0.0.0</version>
  <description>Forward and Inverse Kinematics for Fanuc CRX Series Cobots</description>
  <maintainer email="cranston.daniel@gmail.com">Daniel</maintainer>
  <license>MIT</license>

  <depend>eigen</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>tf2_kdl</depend>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/crx_kinematics_plugin_description.xml" />
  </export>
</package>
