<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crx_kinematics_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cranston.daniel@gmail.com">Daniel</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
